layout overlap fixed

--- a/app/css/activity.css
+++ b/app/css/activity.css
@@ -20,9 +20,10 @@
 .activityPanel{
 	overflow-y:scroll;
 	height:480px;
-	width:285px;
+	/*width:285px;*/
 	background-color: #373c5f;
 	padding-top: 0px;
+	margin-right: -15px;
 /*	padding: 0px 25px 15px 10px;*/
 }
 .activity-item {
