--- a/app/css/meetinglist.css
+++ b/app/css/meetinglist.css
@@ -3,9 +3,59 @@
   background-color: #e7e5d8;
 }
 
+
+@media (max-width: 1200px) { 
+  .meetingContainer{
+    width: 678px;
+  }
+}
+@media (max-width: 992px) { 
+  .meetingContainer{
+    width: 459px;
+  }
+}
+@media (max-width: 768px) { 
+  .actContainer{
+  margin-right: 0px !important;
+
+  }
+  .meetingContainer{
+    width: 60%;
+    float: right;
+  }
+
+}
+@media (max-width: 680px) { 
+  .actContainer{
+  margin-right: 0px !important;
+
+  }
+  .meetingContainer{
+    width: 57%;
+    float: right;
+  }
+
+}
+
+@media (max-width: 630px) { 
+  .actContainer{
+  width:100% !important;
+
+  }
+  .meetingContainer{
+    width: 100%;
+
+  }
+
+}
+
+
+
 .meetinglist{
   padding: 20px;
   height:550px;
+  overflow: hidden;
+
 
 }
 
@@ -34,7 +84,8 @@
   border-radius: 5px;
   overflow: hidden;
 	height: 450px;
-  width: 230px;
+/*  width: 230px;*/
+  margin-bottom: 40px;
 
 
 }
@@ -50,7 +101,6 @@
 .mlPanel{
   margin-left: 0px;
   margin-right: -15px; 
-
   padding:0px 5px 15px 5px;
 /*  padding:0px 15px 15px 5px;*/
 }
@@ -214,10 +264,5 @@ to {
     background-position: 0 0;
 }
 
-@media (max-width: 600px) { 
-  .meetingContainer{
-    width: 300px;
-    background-color: white;
-  }
- }
+
 
